// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-exit 1`] = `[]`;

exports[`default renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stderr 1`] = `[]`;

exports[`default renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stdout 1`] = `
[
  "[?25l",
  "◼ This task will execute.
",
  "[2K[1A[2K[G◼ This task will execute.
◼ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G✔ This task will execute.
↓ This task will never execute. [SKIPPED]
",
  "[2K[1A[2K[1A[2K[G",
  "✔ This task will execute.
↓ This task will never execute. [SKIPPED]
",
  "[?25h",
]
`;

exports[`default renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-exit 1`] = `[]`;

exports[`default renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stderr 1`] = `[]`;

exports[`default renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stdout 1`] = `
[
  "[?25l",
  "◼ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
",
  "[2K[1A[2K[G↓ This task will execute. [SKIPPED]
",
  "[2K[1A[2K[G↓ I am skipping this tasks for reasons. [SKIPPED]
",
  "[2K[1A[2K[G",
  "↓ I am skipping this tasks for reasons. [SKIPPED]
",
  "[?25h",
]
`;

exports[`default renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-exit 1`] = `[]`;

exports[`default renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stderr 1`] = `[]`;

exports[`default renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stdout 1`] = `
[
  "[?25l",
  "◼ This task will execute.
",
  "[2K[1A[2K[G◼ This task will execute.
◼ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will never execute.
",
  "[2K[1A[2K[1A[2K[G✔ This task will execute.
↓ I will be skipped! [SKIPPED]
",
  "[2K[1A[2K[1A[2K[G",
  "✔ This task will execute.
↓ I will be skipped! [SKIPPED]
",
  "[?25h",
]
`;

exports[`simple renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-exit 1`] = `[]`;

exports[`simple renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stderr 1`] = `[]`;

exports[`simple renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stdout 1`] = `
[
  "❯ This task will execute.
",
  "✔ This task will execute.
",
  "❯ This task will never execute.
",
  "↓ This task will never execute. [SKIPPED: This task will never execute.]
",
]
`;

exports[`simple renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-exit 1`] = `[]`;

exports[`simple renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stderr 1`] = `[]`;

exports[`simple renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stdout 1`] = `
[
  "❯ This task will execute.
",
  "↓ This task will execute. [SKIPPED: I am skipping this tasks for reasons.]
",
]
`;

exports[`simple renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-exit 1`] = `[]`;

exports[`simple renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stderr 1`] = `[]`;

exports[`simple renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stdout 1`] = `
[
  "❯ This task will execute.
",
  "✔ This task will execute.
",
  "❯ This task will never execute.
",
  "↓ This task will never execute. [SKIPPED: I will be skipped!]
",
]
`;

exports[`test renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-exit 1`] = `[]`;

exports[`test renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stderr 1`] = `[]`;

exports[`test renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"title":"This task will execute.","hasFinalized":false}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"title":"This task will execute.","hasFinalized":true}}
",
  "{"event":"STATE","data":"STARTED","task":{"title":"This task will never execute.","hasFinalized":false}}
",
  "{"event":"MESSAGE","data":{"skip":"This task will never execute."},"task":{"title":"This task will never execute.","hasFinalized":false}}
",
  "{"event":"STATE","data":"SKIPPED","task":{"title":"This task will never execute.","hasFinalized":true}}
",
]
`;

exports[`test renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-exit 1`] = `[]`;

exports[`test renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stderr 1`] = `[]`;

exports[`test renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"title":"This task will execute.","hasFinalized":false}}
",
  "{"event":"STATE","data":"SKIPPED","task":{"title":"This task will execute.","hasFinalized":true}}
",
  "{"event":"MESSAGE","data":{"skip":"I am skipping this tasks for reasons."},"task":{"title":"This task will execute.","hasFinalized":true}}
",
]
`;

exports[`test renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-exit 1`] = `[]`;

exports[`test renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stderr 1`] = `[]`;

exports[`test renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"title":"This task will execute.","hasFinalized":false}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"title":"This task will execute.","hasFinalized":true}}
",
  "{"event":"STATE","data":"STARTED","task":{"title":"This task will never execute.","hasFinalized":false}}
",
  "{"event":"MESSAGE","data":{"skip":"I will be skipped!"},"task":{"title":"This task will never execute.","hasFinalized":false}}
",
  "{"event":"STATE","data":"SKIPPED","task":{"title":"This task will never execute.","hasFinalized":true}}
",
]
`;

exports[`verbose renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-exit 1`] = `[]`;

exports[`verbose renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stderr 1`] = `[]`;

exports[`verbose renderer: task-skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-stdout 1`] = `
[
  "[STARTED] This task will execute.
",
  "[COMPLETED] This task will execute.
",
  "[STARTED] This task will never execute.
",
  "[SKIPPED] This task will never execute.
",
]
`;

exports[`verbose renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-exit 1`] = `[]`;

exports[`verbose renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stderr 1`] = `[]`;

exports[`verbose renderer: task-skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-stdout 1`] = `
[
  "[STARTED] This task will execute.
",
  "[SKIPPED] I am skipping this tasks for reasons.
",
]
`;

exports[`verbose renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-exit 1`] = `[]`;

exports[`verbose renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stderr 1`] = `[]`;

exports[`verbose renderer: task-skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-stdout 1`] = `
[
  "[STARTED] This task will execute.
",
  "[COMPLETED] This task will execute.
",
  "[STARTED] This task will never execute.
",
  "[SKIPPED] I will be skipped!
",
]
`;
